2006-03-10 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* added logger module (forgot to commit before). 
	* Fixed bug in read_history that crashed python if no .history file 
	  was available
	* added config option for history filename
	* config option for history buffer length
	* default value of history_name in new config file is .pythonhistory
	* Prints error message to sys.stderr when there is some exception 
	  raised in the configfile
	
2006-03-08 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* fixed release.py setup.py and eggsetup.py to include more metadata 
	  useful for pypi.
	  
2006-03-07 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed release.py so python setup.py register works. 
	  (\ must be escaped in description string as \\\\ for reST to work)

2006-03-05 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Updating manual
	* adding readline.py alias (necessary for rlcompleter)
	* adding read/write history to startup.py example
	* minor changes to release.py
	
2006-03-02 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Work on setup and eggsetup
	* Added COPYING file
	
2006-03-02 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Started work on latex manual
	* Created configuration directory in the package directory
	* Moved config file and startup.py example to configuration dir

2006-01-31 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	
	* Added experimental mulitline paste. Thís version ALWAYS adds 
	  a final newline so there is what you paste is always executed!!!
	* Moved win32paste config parameters from module level into 
	  readline class (in preparation for adding config file parameter)
	* Added svn url to long description
	
2006-01-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Moved exit key (control-D) logic to separate key dispatch handler
	* Added bind_exit_key to config file
	* Added un_bind_key command to configfile