@@ -1,3 +1,6 @@
+2006-04-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+	* Improved ansi escape sequence parsing
+	
 2006-03-10 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* added logger module (forgot to commit before). 
 	* Fixed bug in read_history that crashed python if no .history file 
